--- a/pagina3.html
+++ b/pagina3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
-    <link rel="stylesheet" href="estilo/style3.css">
+    <link rel="stylesheet" href="style3.css">
     <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
