--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png" class="logohead">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png" class="logohead">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1" >
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1" >
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
