--- a/pagina1.html
+++ b/pagina1.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style1.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1">
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1">
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
@@ -28,7 +28,7 @@
     <main>
         <section class="texto1">
             <h2>Água</h2>
-            <img src="img/agua.jpg" alt="imagem agua" class="imagem2">
+            <img src="agua.jpg" alt="imagem agua" class="imagem2">
             <h2>A escassez da água</h2>
             <p>A escassez de água no mundo é agravada em virtude da desigualdade social e da falta de usos sustentáveis dos recursos naturais. De acordo com os números apresentados pela ONU – Organização das Nações Unidas – fica claro que controlar o uso da água significa deter poder.<br><br>
             As diferenças registradas entre os países desenvolvidos e os em desenvolvimento chocam e evidenciam que a crise mundial dos recursos hídricos está diretamente ligada às desigualdades sociais.<br><br>
