--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <section class="text">
             <h2>Qual o objetivo da sustentabilidade?</h2>
-            <img src="img/sustentavel.jpeg" alt="imagem sustentavel" class="imagem2">
+            <img src="sustentavel.jpeg" alt="imagem sustentavel" class="imagem2">
             <p>Busca-se o equilíbrio entre desenvolvimento econômico, responsabilidade social e preservação ambiental, visando evitar a exaustão dos recursos naturais e minimizar impactos adversos.<br><br>
             Ao adotar práticas sustentáveis, projetamos um futuro mais próspero, com biodiversidade, respeito ao meio ambiente e riqueza compartilhada  <br><br> 
             Dessa forma, o planeta pode ser um ambiente saudável, com igualdade entre pessoas e crescimento econômico duradouro.</p><br>
