--- a/pagina2.html
+++ b/pagina2.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style2.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1">
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1">
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
@@ -28,7 +28,7 @@
     <main>
         <section>
             <h2>Esgoto</h2><br>
-            <img src="img/esgoto.jpeg" alt="imagem esgoto" class="imagem2">
+            <img src="esgoto.jpeg" alt="imagem esgoto" class="imagem2">
             <h2>O que você precisa saber sobre o esgoto a céu aberto?</h2>
             <p>O esgoto a céu aberto é uma realidade para uma parcela considerável da população. De acordo com dados do Instituto Trata Brasil, quase 100 milhões de brasileiros não têm acesso ao serviço de coleta de esgoto e somente 49% de todo o esgoto gerado no país passa por algum tipo de tratamento.
             Do ponto de vista global, a situação não é muito melhor. Um relatório feito pela Organização Mundial de Saúde (OMS), em parceria com o Fundo das Nações Unidas para a Infância (UNICEF), indica que seis em cada dez pessoas no mundo não têm acesso a saneamento seguro. Neste post, vamos apontar os prejuízos desse cenário e o que pode ser feito para revertê-lo.</p><br>
