--- a/pagina3.html
+++ b/pagina3.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style3.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1">
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1">
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
@@ -28,7 +28,7 @@
     <main>
         <section>
             <h2>Saneamento básico</h2><br>
-            <img src="img/saneamento.webp" alt="imagem saneamento" class="imagem2">
+            <img src="saneamento.webp" alt="imagem saneamento" class="imagem2">
             <h2>O que é saneamento básico?</h2>
             <p>Saneamento básico é um conjunto de serviços fundamentais para o desenvolvimento socioeconômicas de uma região tais como abastecimento de água, esgotamento sanitário, limpeza urbana, drenagem urbana, manejos de resíduos sólidos e de águas pluviais. O saneamento básico é um direito garantido pela Constituição Federal e instituído pela Lei nº. 11.445/2007.<br><br>
             De forma simplificada, a cadeia do saneamento tem início na captação em reservatórios de água, onde acontece o tratamento e distribuição aos pontos de consumo, sejam eles residenciais ou industriais.Em seguida, é feito o descarte em uma rede de esgoto, direcionando o resíduo para tratamento. O ciclo tem conclusão quando a água tratada é devolvida ao ciclo natural.<br><br></p>
