--- a/pagina4.html
+++ b/pagina4.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style4.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1">
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1">
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
@@ -28,7 +28,7 @@
     <main>
         <section>
             <h2>Meio ambiente</h2><br>
-            <img src="img/meio ambiente.jpg" alt="imagem meio ambiente" class="imagem2">
+            <img src="meio ambiente.jpg" alt="imagem meio ambiente" class="imagem2">
             <h2>O que é?</h2>
             <p>Meio ambiente  é o conjunto de elementos biológicos (flora e fauna), físicos e químicos organizados em diferentes ecossistemas naturais e sociais em que se insere o Homem num processo de interação que cria condições para mantêm a vida no planeta. O meio ambiente faz referência a todos os recursos naturais necessário para a sobrevivência e o desenvolvimento da sociedade.
             </p>
