--- a/pagina5.html
+++ b/pagina5.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUREFY</title>
     <link rel="stylesheet" href="style5.css">
-    <link rel="shortcut icon" type="imagex/png" href="./img/gota.ICO.png">
+    <link rel="shortcut icon" type="imagex/png" href="gota.ICO.png">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logoplaneta.png" alt="logo planeta" class="imagem1">
+            <img src="logoplaneta.png" alt="logo planeta" class="imagem1">
         </div>
         <h1>INSTITUTO PUREFY</h1>
         <nav>
@@ -28,7 +28,7 @@
     <main>
         <section class="text">
             <h2>Dessalinização da água</h2><br>
-            <img src="img/dessanalização.jpg" alt="imagem dessanalização" class="imagem2">
+            <img src="dessanalização.jpg" alt="imagem dessanalização" class="imagem2">
             <h2>Dessalinização da água do mar: afinal, esse projeto vale a pena?</h2>
             <p>A água é essencial para a manutenção da vida em todo o planeta. Em um indivíduo adulto, por exemplo, a água compõe cerca de 60% do seu organismo. Por isso, esse recurso é fundamental para a hidratação dos humanos e também de animais e vegetais. <br><br>
             No entanto, apesar de 71% da superfície terrestre ser coberta por água, apenas 2,5% dessa quantidade está disponível em água doce. Além disso, os mecanismos para a renovação desse recurso são poucos e lentos, o que torna a água potável um recurso finito. Para evitar o seu esgotamento, é preciso recorrer a alternativas.<br><br>
